# StockAI-Agent

./: README.md  pyproject.toml
src/financial_analysis_crew/: crew.py  main.py
src/financial_analysis_crew/config/: agents.yaml  tasks.yaml
