[project]
name = "financial_analysis_crew"
version = "0.1.0"
description = "financial-analysis-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "langtrace_python_sdk>=3.3"
]

[project.scripts]
financial_analysis_crew = "financial_analysis_crew.main:run"
run_crew = "financial_analysis_crew.main:run"
train = "financial_analysis_crew.main:train"
replay = "financial_analysis_crew.main:replay"
test = "financial_analysis_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
